# xDRM

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: code_style_check.yml
docs/: README.en.md
src/: CMakeLists.txt  main.cpp  main_bk.cpp
src/xdrm/: xdrm.c  xdrm.h
src/xdrm/conf/: conf.h  debug.h  device.h
src/xdrm/core/: core.c  core.h
src/xdrm/fps/: fps.c  fps.h
src/xdrm/pattern/: pattern.c  pattern.h
